# mangicards

./: README.md  main.py  pyproject.toml
