[tool.poetry]
name = "mangicards"
version = "0.1.0"
description = ""
authors = ["Margarita Lacuaña Apaza <mardecode@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.10.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
